fix: update readme with figma link and update :root css variables

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prismfly - Front End Challenge</title>
+  <title>Prismfly - Front End Developer Coding Challenge</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="https://use.typekit.net/abd0ulq.css">
   <link rel="stylesheet" href="https://use.typekit.net/mcy6kmg.css">
