--- a/index.html
+++ b/index.html
@@ -8,14 +8,93 @@
   <link rel="stylesheet" href="https://use.typekit.net/abd0ulq.css">
   <link rel="stylesheet" href="https://use.typekit.net/mcy6kmg.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <script src="/js/index.js" defer></script>
 </head>
 <body>
   <section>
-    Add your awesome code here!
+    <!-- Desktop layout with three rows -->
+    <div class="desktop-layout">
+      <div class="row spain-row">
+        <div class="image-section">
+          <img src="/assets/carousel-first-image.jpg" alt="Spanish coastal town with colorful buildings">
+        </div>
+        <div class="content-section">
+          <div class="country-label">Spain</div>
+          <h1 class="section-title">Discover Spain: tapestry of culture</h1>
+          <p class="section-description">
+            Embark on a journey through Spain with our expertly crafted tours. From the vibrant streets of Barcelona to the world-authentic cuisine and flamenco covered in the rich tapestry of Spanish culture. Let us guide you through an adventure where every moment is filled with discovery and delight.
+          </p>
+          <button class="learn-more-btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="row egypt-row">
+        <div class="image-section">
+          <img src="/assets/carousel-second-image.jpg" alt="Egyptian pyramids and desert landscape">
+        </div>
+        <div class="content-section">
+          <div class="country-label">Egypt</div>
+          <h2 class="section-title">An odyssey through ancient wonders</h2>
+          <p class="section-description">
+            From the iconic pyramids of Giza to the sacred banks of the Nile, our Egyptian tours offer an extraordinary journey through time. Explore magnificent temples, uncover the mysteries of pharaonic history. Let us lead you on a remarkable adventure where every step reveals the magic of Egypt's past and present.
+          </p>
+          <button class="learn-more-btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="row portugal-row">
+        <div class="image-section">
+          <img src="/assets/carousel-third-image.jpg" alt="Madeira's lush green mountains and coastline">
+        </div>
+        <div class="content-section">
+          <div class="country-label">Portugal</div>
+          <h2 class="section-title">Madeira: exploring nature's paradise</h2>
+          <p class="section-description">
+            Discover Madeira's breathtaking volcanic landscapes and pristine beauty await. Our thoughtfully designed tours invite you to discover the island's natural wonders, from rugged coastlines to verdant forests. Immerse yourself in the charming villages, indulge in local cuisine, and experience the warm hospitality that makes this enchanting destination.
+          </p>
+          <button class="learn-more-btn">Learn More</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile carousel layout -->
+    <div class="mobile-carousel">
+      <div class="carousel-slide spain-slide">
+        <img src="/assets/carousel-first-image.jpg" alt="Spanish coastal town with colorful buildings" class="slide-image">
+        <div class="slide-content">
+          <div class="country-label">Spain</div>
+          <h1 class="section-title">Discover Spain: tapestry of culture</h1>
+          <p class="section-description">
+            Embark on a journey through Spain with our expertly crafted tours. From the vibrant streets of Barcelona to the world-authentic cuisine and flamenco covered in the rich tapestry of Spanish culture.
+          </p>
+          <button class="learn-more-btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="carousel-slide egypt-slide">
+        <img src="/assets/carousel-second-image.jpg" alt="Egyptian pyramids and desert landscape" class="slide-image">
+        <div class="slide-content">
+          <div class="country-label">Egypt</div>
+          <h2 class="section-title">An odyssey through ancient wonders</h2>
+          <p class="section-description">
+            From the iconic pyramids of Giza to the sacred banks of the Nile, our Egyptian tours offer an extraordinary journey through time. Explore magnificent temples, uncover the mysteries of pharaonic history.
+          </p>
+          <button class="learn-more-btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="carousel-slide portugal-slide">
+        <img src="/assets/carousel-third-image.jpg" alt="Madeira's lush green mountains and coastline" class="slide-image">
+        <div class="slide-content">
+          <div class="country-label">Portugal</div>
+          <h2 class="section-title">Madeira: exploring nature's paradise</h2>
+          <p class="section-description">
+            Discover Madeira's breathtaking volcanic landscapes and pristine beauty await. Our thoughtfully designed tours invite you to discover the island's natural wonders, from rugged coastlines to verdant forests.
+          </p>
+          <button class="learn-more-btn">Learn More</button>
+        </div>
+      </div>
+    </div>
   </section>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
